Update dotfiles (Hyprland configs, scripts, tweaks)

--- a/.config/hypr/conf/keybindings/einarthegolden.conf
+++ b/.config/hypr/conf/keybindings/einarthegolden.conf
@@ -26,7 +26,8 @@ bind = $mainMod, E, exec, ~/.config/ml4w/settings/filemanager.sh      # Open the
 bind = $mainMod CTRL, E, exec, ~/.config/ml4w/settings/emojipicker.sh # Open the emoji picker
 bind = $mainMod CTRL, C, exec, ~/.config/ml4w/settings/calculator.sh  # Open the calculator
 bind = $mainMod, L, exec, localsend
-bind = $mainMod SHIFT, H, exec, stremio
+bind = $mainMod, H, exec, stremio
+bind = $mainMod, slash, exec, proton-pass
 
 # Custom Applications
 bind = $mainMod, D, exec, discord-screenaudio       # Open Discord (ScreenAudio)
